Updated the CSS to fix the spacing issue when viewing in Tablet mode.

--- a/CSS_module2_solution/css/module2style.css
+++ b/CSS_module2_solution/css/module2style.css
@@ -6,7 +6,7 @@
 }
 h1
  {
-  margin-bottom: 25px;
+  margin-bottom: 15px;
   text-align: center;
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 1.75em;
@@ -54,7 +54,7 @@ p
   background-color: #ef325e;
   text-align: center;
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-size: 20px;
+  font-size: 1.25em;
 }
 
 .sectionTitleBox_sushi {
@@ -69,7 +69,7 @@ p
   background-color: #e8ebef;
   text-align: center;
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-size: 20px;
+  font-size: 1.25em;
 }
 
 .sectionTitle {
@@ -77,7 +77,9 @@ p
 }
 
 .sectionParagraph {
-  margin-top: 40px;
+  margin-top: 35px;
+  margin-right: auto;
+  margin-left: auto;
 }
 
 /* Simple Responsive Framework. */
@@ -138,8 +140,8 @@ p
 
 /********** Tablet View **********/
 @media (min-width: 768px) and (max-width: 991px) {
-  .col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, 
-  .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12 {
+  .col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, 
+  .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12 {
     position: relative;
         float: left;
         border: 1px solid black;
@@ -165,7 +167,7 @@ p
     width: 41.66%;
   }
   .col-md-6 {
-    width: 49%;
+    width: 50%;
   }
   .col-md-7 {
     width: 58.33%;
@@ -189,15 +191,15 @@ p
 
 /********** Mobile View **********/
 @media (max-width: 767px) {
-  .col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, 
-  .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12 {
+  .col-sm-1, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, 
+  .col-sm-8, .col-sm-9, .col-sm-10, .col-sm-11, .col-sm-12 {
     position: relative;
         float: left;
         border: 1px solid black;
         background-color: gray;
         height: 300px;
         overflow: hidden;
-        margin-right: 1%;
+        margin-right: 0%;
         margin-top: 1%;
   }
   .col-sm-1 {
@@ -237,3 +239,4 @@ p
     width: 100%;
   }
 }
+
